# AIS_spinfermion

./: .gitignore  CMakeLists.txt  ML_test.cxx  RKKY_scale.cxx  RKKY_test.cxx  RKKY_test_inputs.txt  compile_result.txt
ais/: ais.h  fcc_lattice.h  input.h  optimize.h  random.h
ais/classical/: RKKY.h  heis.h
ais/nn/: neural_network.h
ais/quantum/: chebyshev.h  csr.h  pars.txt  spin_fermion.h
data/: training_mse_spinferion_1d_nBatch_1000_beta_8_g_1_L_40_R_20.txt
experimental/: Ising.h  J1J2.h  J1J2_test.cxx  On_RBM.h
hwchen/fcc/: fcc_lattice.h  main.cpp
hwchen/neural_network/: CMakeLists.txt  ML_test.cxx  main.cpp  neural_network.h
